표시 텍스트 수정

--- a/1.html
+++ b/1.html
@@ -29,7 +29,7 @@
       <option value='2840'>2840den</option>
       <option value='7100'>7100den</option>
       </select>
-      <input type="text" size = "15" id="측정중량" placeholder="측정치 중량" onchange="yarn_left()">kg
+      <input type="text" size = "15" id="측정중량" placeholder="측정 중량" onchange="yarn_left()">kg
       <p>
         <h3>잔량 계산 결과 = <span id="result"></span> m</h3>
       </p>
