--- a/3.html
+++ b/3.html
@@ -20,13 +20,23 @@
         <div class="nav">
           <ul class="nav-list">
             <li><a href="2.html">얀 잔량</a></li>
-            <li><a href="3.html">연입율</a></li>
+            <li><a href="3.html" id="active">연입율</a></li>
           </ul>
         </div>
         <!-- nav -->
         <div class="content">
-          <p>환영합니다.</p>
-          필요한 기능을 선택하세요.
+          <span style="font-weight:bold">연입율 계산툴</span>
+          <p>
+            <label>코어경</label>
+            <input type="number" style="width: 130px;height:24px;text-align:center;" id="코어" placeholder="하경 입력" onchange="연입율()" > mm<br>
+            <label>유닛 외경</label>
+            <input type="number" style="width: 130px;height:24px;text-align:center;" id="유닛" placeholder="유닛 외경" onchange="연입율()"> mm<br>
+            <label>집합/연합 피치</label>
+            <input type="number" style="width: 130px;height:24px;text-align:center;" id="피치" placeholder="피치" onchange="연입율()"> mm<br>
+        </p>
+          <p>
+            연입율 계산 결과 = <span id="결과"></span> %<br>
+          </p>
         </div>
       </div>
       <!-- container -->
