--- a/3.html
+++ b/3.html
@@ -4,7 +4,7 @@
   <title>Cable Guys Tools</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/master2.css">
+  <link rel="stylesheet" href="css/master2.css">
   <link href="http://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
   <script src="calculation2.js"></script>
 </head>
@@ -28,11 +28,11 @@
           <span style="font-weight:bold">연입율 계산툴</span>
           <p>
             <label>코어경</label>
-            <input type="number" style="width: 130px;height:24px;text-align:center;" id="코어" placeholder="하경 입력" onchange="연입율()" > mm<br>
+            <input type="text" style="width: 130px;height:24px;text-align:center;" id="코어" placeholder="하경 입력" onchange="연입율()" > mm<br>
             <label>유닛 외경</label>
-            <input type="number" style="width: 130px;height:24px;text-align:center;" id="유닛" placeholder="유닛 외경" onchange="연입율()"> mm<br>
+            <input type="text" style="width: 130px;height:24px;text-align:center;" id="유닛" placeholder="유닛 외경" onchange="연입율()"> mm<br>
             <label>집합/연합 피치</label>
-            <input type="number" style="width: 130px;height:24px;text-align:center;" id="피치" placeholder="피치" onchange="연입율()"> mm<br>
+            <input type="text" style="width: 130px;height:24px;text-align:center;" id="피치" placeholder="피치" onchange="연입율()"> mm<br>
         </p>
           <p>
             연입율 계산 결과 = <span id="결과"></span> %<br>
