--- a/2.html
+++ b/2.html
@@ -51,7 +51,7 @@
           <input type="text" style="width: 130px;height:24px;text-align:center;" id="중량" value="0." placeholder="Measured Weight" onchange="얀잔량()"> kg
         </p>
           <p>
-            잔량 계산 결과 = <span id="결과"></span> m
+            잔량 계산 결과 = <span style="display:inline-block;width:150px;text-align:center;" id="결과"></span> m
           </p>
         </div>
       </div>
