--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <!-- nav -->
         <div class="content">
-          <p>환영합니다.</p>
+          환영합니다.<br><br>
           필요한 기능을 선택하세요.
         </div>
       </div>
