--- a/index.html
+++ b/index.html
@@ -24,10 +24,20 @@
           </ul>
         </div>
         <!-- nav -->
-        <div class="content">
-          환영합니다.<br><br>
-          필요한 기능을 선택하세요.
+        <div class="content" style="text-align:left;">
+          <br>환영합니다.<br><br>
+          위 메뉴에서 필요한 기능을 선택하세요.
+          <br><br>
+          추가 또는 기능 보완이 필요하실 경우,
+          <br>아래 이메일 링크를 통해 문의하시기 바랍니다.
+          <br><br>
+          <div style="text-align:center">
+            <form method="post" action="mailto:mslee81@lscns.com" >
+              <input type="submit" value="이메일로 문의 하기" />
+            </form>
+          </div>
         </div>
+
       </div>
       <!-- container -->
       <div class="footer">
