--- a/3.html
+++ b/3.html
@@ -30,7 +30,7 @@
               <td id="tool_title" colspan="3">연입율 계산툴</td>
             </tr>
             <tr>
-              <td id="item">횡권/집합/연합 하경</td>
+              <td id="item">횡권/집합 하경</td>
               <td id="value"><input type="text" class="입력" id="코어" placeholder="Input inner diameter" onchange="연입율()" ></td>
               <td id="unit">mm</td>
             </tr>
@@ -40,7 +40,7 @@
               <td id="unit">mm</td>
             </tr>
             <tr>
-              <td>횡권/집합/연합 피치</td>
+              <td>횡권/집합 피치</td>
               <td ><input type="text" class="입력" id="피치" placeholder="Input Pitch" onchange="연입율()"></td>
               <td id="unit">mm</td>
             </tr>
