--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
           위 메뉴에서 필요한 기능을 선택하세요.
           <br><br>
           추가 또는 기능 보완이 필요하실 경우,
-          <br>아래 이메일 링크를 통해 문의하시기 바랍니다.
+          <br>아래 양식을 통해 문의하시기 바랍니다.
           <br><br>
           <div style="text-align:center">
-            <form method="post" action="mailto:mslee81@lscns.com" >
-              <input type="submit" value="이메일로 문의 하기" />
-            </form>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZoADBH2hyg2bB9M3UUQy4Mcp2vI_oIMYwDOyYYIVnWcYKDQ/viewform?embedded=true" width="auto" height="280px" frameborder="0" marginheight="0" marginwidth="0">로드 중...</iframe>
           </div>
         </div>
 
