--- a/3.html
+++ b/3.html
@@ -54,7 +54,7 @@
       </div>
       <!-- container -->
       <div class="footer">
-        <p class="copyright">&copy;copy 2019</p>
+        <p class="copyright">&copy; 2019 by MANSU</p>
       </div>
       <!-- footer -->
     </div>
