--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/master2.css">
   <link href="http://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
-  <script src="calculation2.js"></script>
+  <script src="calculation.js"></script>
 </head>
 
 <body>
@@ -19,6 +19,7 @@
       <div class="container">
         <div class="nav">
           <ul class="nav-list">
+            <li><a href="1.html">마킹 코드</a></li>
             <li><a href="2.html">얀 잔량</a></li>
             <li><a href="3.html">연입율</a></li>
           </ul>
