--- a/1.html
+++ b/1.html
@@ -1,37 +1,59 @@
 <!doctype html>
 <html>
 <head>
-  <title>LS tools - Welcome</title>
+  <title>Cable Guys Tools</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/master2.css">
+  <link href="http://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
   <script src="calculation.js"></script>
 </head>
+
 <body>
-  <h1><a href="index.html">LS tools</a></h1>
-  <ol>
-    <li><a href="1.html">얀 잔량</a></li>
-  </ol>
-  <h2>얀 잔량 계산</h2>
-  <p>
-      <select id='얀종류' onchange="yarn_left()">
-      <option value=''>자재 타입</option>
-      <optgroup label="아라미드얀">
-        <option value= "9000">denier</option>
-        <option value= "10000">dtex</option>
-      </optgroup>
-      <optgroup label="글라스얀">
-        <option value="1000">tex</option>
-      </optgroup>
-      </select>
-      <select id='밀도'onchange="yarn_left()">
-        <option value=''>선밀도</option>
-      <option value='1420'>1420den</option>
-      <option value='2840'>2840den</option>
-      <option value='7100'>7100den</option>
-      </select>
-      <input type="text" size = "15" id="측정중량" placeholder="측정 중량" onchange="yarn_left()">kg
-      <p>
-        <h3>잔량 계산 결과 = <span id="result"></span> m</h3>
-      </p>
+  <div class="frame">
+    <div class="header">
+      <div class="logo">
+        <a href="index.html" style="color:white">케이블맨 툴즈</a>
+      </div>
+      <!-- header -->
+      <div class="container">
+        <div class="nav">
+          <ul class="nav-list">
+            <li><a href="1.html" id="active">마킹 코드</a></li>
+            <li><a href="2.html">얀 잔량</a></li>
+            <li><a href="3.html">연입율</a></li>
+          </ul>
+        </div>
+        <!-- nav -->
+        <div class="content">
+          <table>
+            <tr>
+                <td id="tool_title" colspan="3">마킹 코드 생성툴</span></td>
+            </tr>
+            <tr>
+              <td id="item"><button class="button" onclick="ISO8601_week_no(new Date())">금주 차수</button></td>
+              <td><span id="결과"></span></td>
+              <td id="unit">주</td>
+            </tr>
+            <tr>
+              <td id="item"><button class="button" onclick="YM(new Date())">금월 YM 코드</button></td>
+              <td><span id="결과2"></span></td>
+              <td id="unit"></td>
+            </tr>
+
+            <tr>
+              <td class="statement" colspan="3">※혹시 'undefined'가 표시되면 알려주세요.</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <!-- container -->
+      <div class="footer">
+        <p class="copyright">&copy; 2019 by MANSU</p>
+      </div>
+      <!-- footer -->
+    </div>
+  </div>
+  <!-- frame -->
 </body>
 </html>
